--- a/src/styles.css
+++ b/src/styles.css
@@ -61,14 +61,14 @@ font-family: 'Times New Roman', Times, serif;}
 }
 
 .timer-display{
-    font-size: 3.5rem;
+    font-size: 4.5rem;
     text-align: center;
-    width: fit-content;
+    width: 100%;
     margin: auto;
     border: 3px solid black;
-    border-radius: 10%;
+    border-radius: 20%;
     padding: 10px 30px;
-    margin-top: 20px;
+    margin-top: 10px;
 
 }
 
@@ -81,7 +81,8 @@ font-family: 'Times New Roman', Times, serif;}
     justify-content: space-evenly;
     font-size: 1.5rem;
     width: 5%;
-    margin: 10px;
+    margin:5px;
+    gap:10px;
 }
 
 
